--- a/css/print/pdf.css
+++ b/css/print/pdf.css
@@ -42,7 +42,40 @@ h3,
 h4,
 h5,
 h6 {
-  text-shadow: 0 0 0 #000 !important;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-transform: uppercase;
+  text-shadow: none;
+  word-wrap: break-word;
+  text-align: center;
+}
+
+.reveal h1 {
+  margin-bottom: 60px;
+  text-transform: uppercase;
+  font-weight: 900;
+  text-shadow: 5px 10px rgba(0, 0, 0, 0.2);
+  font-size: 2em;
+}
+
+.reveal h2 {
+  margin-bottom: 50px;
+  font-size: 1em;
+  text-shadow: 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.reveal h3 {
+  margin-bottom: 40px;
+  font-size: 0.8em;
+  font-weight: 600;
+  text-shadow: 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.reveal h4 {
+  margin-bottom: 30px;
+  font-size: 0.6em;
+  font-weight: 600;
 }
 
 .reveal pre code {
@@ -66,6 +99,7 @@ p {
   width: auto !important;
   height: auto !important;
   overflow: hidden !important;
+  color: rgba(255, 255, 255, 0.8);
 }
 .reveal .slides {
   position: static;
